syntax = "proto3";
package LiftLog.Ui.Models.SessionHistoryDao;

import "Utils.proto";
import "google/protobuf/wrappers.proto";
import "SessionBlueprintDao/SessionBlueprintDaoV2.proto";

message SessionHistoryDaoV2 {
    repeated SessionDaoV2 completed_sessions = 1;
}

message SessionDaoV2 {
    LiftLog.Ui.Models.UuidDao id = 1;
    string session_name = 2;
    repeated RecordedWeightedExerciseDaoV2 recorded_exercises = 3;
    LiftLog.Ui.Models.DateOnlyDao date = 4;
    optional LiftLog.Ui.Models.DecimalValue bodyweight = 5;
    string blueprint_notes = 6;
}


message RecordedWeightedExerciseDaoV2 {
    LiftLog.Ui.Models.SessionBlueprintDao.WeightedExerciseBlueprintDaoV2 exercise_blueprint = 1;
    optional LiftLog.Ui.Models.DecimalValue weight = 2; // deprecated
    repeated PotentialSetDaoV2 potential_sets = 3;
    optional google.protobuf.StringValue notes = 4;
    reserved 5; // Per set weight
}

message PotentialSetDaoV2 {
    optional RecordedSetDaoV2 recorded_set = 1;
    LiftLog.Ui.Models.DecimalValue weight = 2;
}

message RecordedSetDaoV2 {
    int32 reps_completed = 1;
    LiftLog.Ui.Models.TimeOnlyDao completion_time = 2;
    optional LiftLog.Ui.Models.DateOnlyDao completion_date = 3;
}
