syntax = "proto3";

package LiftLog.Ui.Models;

import "SessionHistoryDao/SessionHistoryDaoV2.proto";
import "Utils.proto";
import "google/protobuf/wrappers.proto";

message UserEventPayload {
    // Note that messages shouldn;t just be raw data, but should be a wrapper around the data
    // so we can add additional fields in the future if needed
    oneof event_payload {
        SessionUserEvent session_payload = 1;
        RemovedSessionUserEvent removed_session_payload = 2;
    }
}

message SessionUserEvent {
    LiftLog.Ui.Models.SessionHistoryDao.SessionDaoV2 session = 1;
}
message RemovedSessionUserEvent {
    LiftLog.Ui.Models.UuidDao session_id = 1;
}

message InboxMessageDao {
    LiftLog.Ui.Models.UuidDao from_user_id = 1;
    oneof message_payload {
        FollowRequestDao follow_request = 2;
        FollowResponseDao follow_response = 3;
        UnFollowNotification unfollow_notification = 4;
    }
    // The signature of the [message +from_user_id+ the to_user_id], signed with the private key of the from_user_id
    bytes signature = 5;
}

message FollowRequestDao {
    optional google.protobuf.StringValue name = 1;
    reserved 2; // profile picture
    reserved 3; // public key
}

// Encrypted with the public key of the user who sent the follow request
message FollowResponseDao {
    oneof response_payload {
        FollowResponseAcceptedDao accepted = 1;
        FollowResponseRejectedDao rejected = 2;
    }
}

message FollowResponseAcceptedDao {
    bytes aes_key = 1;
    // Must be given with any requests to user's feed.
    //This may be revoked at any time, if so, the follower should mark user as unfollowed
    string follow_secret = 2;
}

message FollowResponseRejectedDao {
}

message UnFollowNotification {
    string follow_secret = 1;
}
